--- a/style.css
+++ b/style.css
@@ -48,8 +48,7 @@ a {
     margin-bottom: 60px;
     text-transform: uppercase;
     width: 100%;
-    padding-bottom: 105px;
-    /*top: -100px;*/
+    padding-bottom: 103px;
 }
 
 .header::after {
@@ -72,7 +71,7 @@ a {
     align-items: center;
     margin: 0 auto 0 auto;
     max-width: 1200px;
-    padding-top: 126px;
+    padding-top: 28px;
     padding-left: 15px;
     padding-bottom: 12px;
 }
@@ -154,11 +153,11 @@ a {
 /*===h1===*/
 
 .header__container {
-    max-width: 679px;
+    max-width: 702px;
     margin: auto;
     position: relative;
     z-index: 3;
-    padding: 96px 20px 10px 20px;
+    padding-top: 93px;
 }
 
 .header__title {
@@ -169,7 +168,7 @@ a {
     font-family: "Open Sans", sans-serif;
     text-transform: uppercase;
     font-weight: 700;
-    line-height: 1.5;
+    line-height: 1.6;
     overflow: hidden;
 }
 
@@ -1008,14 +1007,14 @@ form.search__box {
 @media (min-width: 641px) and (max-width: 1200px) and (orientation: portrait) {
 
     .header {
-        /*width: 100%;*/
         background-image: url("./images/banner-bg-tablet.jpg");
-        padding-bottom: 70px;
+        padding-bottom: 26px;
     }
 
     .header__menu {
-        padding-left: 30px;
-        padding-right: 38px;
+        margin-top: 12px;
+        margin-left: 22px;
+        margin-right: 35px;
     }
 
     .menu {
@@ -1070,13 +1069,13 @@ form.search__box {
     }
 
     .header__container {
-        margin-left: auto;
-        margin-right: auto;
-        padding: 80px 20px 10px 20px;
+        margin: 50px auto;
+        padding: 20px 20px 20px 20px;
     }
 
     .header__title {
         font-size: 40px;
+        line-height: 1.4;
     }
 
     .trends {
@@ -1134,8 +1133,9 @@ form.search__box {
     .main__post-info {
         width: 100%;
         line-height: 1.5;
-        margin-top: 10px;
-        /*margin-left: 10px;*/
+        /*margin-top: 10px;*/
+        margin-top: 0;
+        margin-left: 0;
     }
 
     /* Style for "10 мест... Справа  */
@@ -1196,7 +1196,10 @@ form.search__box {
     }
 
     .product__info {
-        margin-bottom: 40px;
+        margin-bottom: 36px;
+        margin-left: 34px;
+        margin-right: 34px;
+        outline-offset: 27px;
     }
 
     .social__info {
@@ -1211,6 +1214,10 @@ form.search__box {
     .footer {
         margin-top: 16px;
     }
+
+    .copyright {
+        padding-top: 25px;
+    }
 }
 
 /*===641-1200 Таблет пейзаж Тренд 4 карточки===*/
@@ -1218,6 +1225,7 @@ form.search__box {
 
     .header {
         background-image: url("./images/banner-bg-tablet.jpg");
+        padding-bottom: 26px;
     }
 
     .header__logo-mobile {
@@ -1225,7 +1233,8 @@ form.search__box {
     }
 
     .header__menu {
-        margin-left: 24px;
+        margin-top: 12px;
+        margin-left: 22px;
         margin-right: 35px;
     }
 
@@ -1277,12 +1286,13 @@ form.search__box {
     }
 
     .header__container {
-        margin: 80px auto;
+        margin: 50px auto;
         padding: 20px 20px 20px 20px;
     }
 
     .header__title {
         font-size: 40px;
+        line-height: 1.4;
     }
 
     .menu__list {
@@ -1308,6 +1318,7 @@ form.search__box {
 
     .trend__card {
         width: calc((100% - (4px * 3)) / 4);
+        margin-bottom: 4px;
     }
 
     .main__sidebar {
@@ -1316,6 +1327,20 @@ form.search__box {
 
     .main {
         width: calc((100% - 272px) / 2);
+        margin-left: 20px;
+    }
+
+    .main__post {
+        flex-wrap: wrap;
+        width: 100%;
+    }
+
+    .main__post-info {
+        width: 100%;
+        line-height: 1.5;
+        /*margin-top: 10px;*/
+        margin-top: 0;
+        margin-left: 0;
     }
 
     .sidebar {
@@ -1354,11 +1379,18 @@ form.search__box {
     }
 
     .product__info {
-        margin-bottom: 40px;
+        margin-bottom: 36px;
+        margin-left: 34px;
+        margin-right: 34px;
+        outline-offset: 27px;
     }
 
     .footer {
         margin-top: 16px;
+    }
+
+    .copyright {
+        padding-top: 25px;
     }
 }
 
@@ -1645,10 +1677,16 @@ form.search__box {
         background-image: url("./images/banner-mobile.jpg");
     }
 
+    /*.header__menu {*/
+    /*    margin-left: 5%;*/
+    /*    margin-right: 25px;*/
+    /*    padding-top: 6.5%;*/
+    /*}*/
     .header__menu {
-        margin-left: 5%;
-        margin-right: 25px;
-        padding-top: 6.5%;
+        flex-direction: column-reverse;
+        align-items: end;
+        padding-right: 15px;
+        padding-top: 22px;
     }
 
     .menu {
