--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 
 body {
     margin: 0;
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -92,7 +92,7 @@ a {
     text-align: center;
     align-items: center;
     color: #ffffff;
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     /*font-size: 13px; */
     font-weight: 400;
     font-style: normal;
@@ -116,7 +116,7 @@ a {
     padding-left: 0;
     list-style: none;
     color: #ffffff;
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     font-size: 13px;
     font-weight: 400;
     font-style: normal;
@@ -165,7 +165,7 @@ a {
     font-size: 45px;
     color: #ffffff;
     /*display: block;*/
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     text-transform: uppercase;
     font-weight: 700;
     line-height: 1.6;
@@ -184,14 +184,13 @@ a {
     /*max-width: 1200px;*/
     margin: auto;
     position: relative;
-    /*z-index: 3;*/
 }
 
 .trends__title {
     margin: auto;
     color: #0f0d0e;
     text-align: center;
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     text-transform: uppercase;
     font-size: 20px;
     font-weight: 700;
@@ -294,7 +293,7 @@ a {
     width: 100%;
     color: #b59f5b;
     font-size: 12px;
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     text-transform: uppercase;
     font-weight: 700;
     margin-right: 12px;
@@ -314,7 +313,7 @@ a {
 }
 
 .trend__title {
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     text-transform: uppercase;
     font-size: 17px;
     font-weight: 700;
@@ -363,7 +362,7 @@ a {
 .categories ul li a {
     width: 125px;
     color: #b59f5b;
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     font-size: 14px;
     font-weight: 700;
     font-style: normal;
@@ -394,7 +393,7 @@ a {
 
 .post__title a {
     color: #0f0d0e;
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     font-size: 20px;
     font-weight: 700;
     font-style: normal;
@@ -417,7 +416,7 @@ a {
 .date {
     width: 79px;
     color: #888888;
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     font-size: 12px;
     font-weight: 400;
     font-style: normal;
@@ -430,7 +429,7 @@ a {
 .author {
     width: 125px;
     color: #000000;
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     font-size: 12px;
     font-weight: 700;
     font-style: normal;
@@ -442,7 +441,7 @@ a {
 /*===Итак, вы в Питере===*/
 .post__text {
     color: #0f0d0e;
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     font-size: 15px;
     font-weight: 400;
     font-style: normal;
@@ -466,7 +465,7 @@ a {
 
 .header__sidebar {
     color: #0f0d0e;
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     font-size: 14px;
     font-weight: 700;
     font-style: normal;
@@ -510,7 +509,7 @@ a {
 /*===10 мест===*/
 .sidebar__title a {
     display: block;
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     font-size: 14px;
     color: #000000;
     text-decoration: none;
@@ -540,7 +539,7 @@ form.search__box {
     width: 221px;
     height: 49px;
     background-color: #f4f7f6;
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     font-size: 13px;
     color: #000000;
     outline: none;
@@ -578,7 +577,7 @@ form.search__box {
 
 /*===Рассылка===*/
 .header__subscribe {
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     color: #0f0d0e;
     font-size: 14px;
     font-weight: 700;
@@ -605,10 +604,10 @@ form.search__box {
 }
 
 .email {
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     box-sizing: border-box;
     border: none;
-    max-width: 330px;
+    max-width: 272px;
     height: 49px;
     background-color: #f4f7f6;
     font-size: 13px;
@@ -637,7 +636,7 @@ form.search__box {
     vertical-align: middle;
     color: #ffffff;
     font-size: 14px;
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     text-transform: uppercase;
     font-weight: 700;
     font-style: normal;
@@ -652,12 +651,11 @@ form.search__box {
 /*===Теги===*/
 .tag {
     margin-top: 68px;
-    /*transform: translate(0px, -28px); */
 }
 
 .tag__header-sidebar {
     color: #0f0d0e;
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     font-size: 14px;
     font-weight: 700;
     font-style: normal;
@@ -695,7 +693,7 @@ form.search__box {
 }
 
 .boxes li a {
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     color: #0f0d0e;
     font-weight: 700;
     text-align: center;
@@ -706,7 +704,7 @@ form.search__box {
 
 /*===Темы===*/
 .topics {
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     font-size: 12px;
     font-weight: 700;
     font-style: normal;
@@ -715,7 +713,7 @@ form.search__box {
 }
 
 .topics__sidebar {
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     color: #0f0d0e;
     font-size: 14px;
     font-weight: 700;
@@ -737,7 +735,7 @@ form.search__box {
 }
 
 .topics ul li a {
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     font-size: 14px;
     color: #000000;
 }
@@ -769,21 +767,22 @@ form.search__box {
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto 0 auto;
+    justify-content: space-between;
 }
 
 /*Заголовок наши изделия*/
 .products__container {
     display: flex;
     /*width: 100%; */
-    padding-left: 15px;
-    padding-right: 15px;
+    /*padding-left: 15px;*/
+    /*padding-right: 15px;*/
 }
 
 .products__title {
     margin: auto;
     color: #0f0d0e;
     text-align: center;
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     text-transform: uppercase;
     font-size: 20px;
     font-weight: 700;
@@ -836,19 +835,23 @@ form.search__box {
 .product__img {
     text-align: center;
     background-repeat: no-repeat;
-    height: 204px;
+    /*height: 204px;*/
     width: 100%;
     object-fit: cover;
     object-position: bottom;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .product__preview {
     text-align: center;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .product__info {
     outline: 3px solid #b59f5b;
-    outline-offset: 30px;
+    outline-offset: 34px;
     display: flex;
     flex-direction: column;
     flex-grow: 1;
@@ -859,7 +862,7 @@ form.search__box {
 }
 
 .product__title {
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     font-size: 20px;
     text-transform: uppercase;
     color: #0f0d0e;
@@ -872,7 +875,7 @@ form.search__box {
 }
 
 .product__description-card {
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     font-size: 15px;
     line-height: 22px;
     color: #0f0d0e;
@@ -889,7 +892,7 @@ form.search__box {
 }
 
 .old__price {
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     font-size: 14px;
     text-decoration: line-through;
     color: #0f0d0e;
@@ -897,7 +900,7 @@ form.search__box {
 }
 
 .new__price {
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     font-size: 20px;
     text-transform: uppercase;
     color: #0f0d0e;
@@ -982,7 +985,7 @@ form.search__box {
 
 .copyright {
     font-size: 12px;
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     color: #999999;
     font-weight: 700;
     line-height: 40px;
@@ -1088,7 +1091,7 @@ form.search__box {
     .trends__title {
         color: #0f0d0e;
         text-align: center;
-        font-family: "Open Sans", sans-serif;
+        font-family: "OpenSans", sans-serif;
         text-transform: uppercase;
         font-size: 16px;
         font-weight: 700;
@@ -1143,7 +1146,7 @@ form.search__box {
         width: 281px;
         height: 36px;
         color: #0f0d0e;
-        font-family: "Open Sans", sans-serif;
+        font-family: "OpenSans", sans-serif;
         font-size: 17px;
         font-weight: 700;
         font-style: normal;
@@ -1161,10 +1164,14 @@ form.search__box {
         margin-right: 20px;
     }
 
+    .products {
+        margin: 0 35px;
+    }
+
     .products__title {
         color: #0f0d0e;
         text-align: center;
-        font-family: "Open Sans", sans-serif;
+        font-family: "OpenSans", sans-serif;
         text-transform: uppercase;
         font-size: 16px;
         font-weight: 700;
@@ -1178,28 +1185,32 @@ form.search__box {
 
     .products__container-card {
         flex-wrap: wrap;
-        justify-content: space-between;
+        margin-left: 0;
+        margin-right: 0;
+        padding-right: 0;
+        padding-left: 0;
     }
 
     .product__card {
-        width: 47%;
-        /*width: calc(100% / 2 - 52px);*/
+        /*width: 47%;*/
+        width: calc(100% / 2 - 52px);
         margin-bottom: 20px;
     }
 
     .product__img {
-        height: 227px;
+        width: 100%;
+        padding-left: 10px;
+        padding-right: 10px;
     }
 
     .product__preview {
-        height: 227px;
+        width: 100%;
+        padding-left: 10px;
+        padding-right: 10px;
     }
 
     .product__info {
-        margin-bottom: 36px;
-        margin-left: 34px;
-        margin-right: 34px;
-        outline-offset: 27px;
+        margin-bottom: 77px;
     }
 
     .social__info {
@@ -1326,8 +1337,7 @@ form.search__box {
     }
 
     .main {
-        width: calc((100% - 272px) / 2);
-        margin-left: 20px;
+        margin: 0 35px;
     }
 
     .main__post {
@@ -1344,15 +1354,21 @@ form.search__box {
     }
 
     .sidebar {
-        margin-right: 0;
+        margin-left: 0;
+        /*width: 270px;*/
+        margin-right: 35px;
     }
 
     .main__post-images {
         width: 100%;
     }
 
+    .products {
+        margin: 0 35px;
+    }
+
     .product__title {
-        font-size: 1.1em;
+        font-size: 16px;
     }
 
     .product__title:after {
@@ -1361,28 +1377,30 @@ form.search__box {
 
     .products__container-card {
         flex-wrap: wrap;
-        justify-content: space-between;
+        margin-left: 0;
+        margin-right: 0;
+        padding-right: 0;
+        padding-left: 0;
     }
 
     .product__card {
-        width: 47%;
-        /*width: calc(100% / 2 - 52px);*/
+        /*width: 47%;*/
+        width: calc(100% / 2 - 52px);
         margin-bottom: 20px;;
     }
 
     .product__img {
-        height: 227px;
+        /*height: 227px;*/
+        width: 100%;
     }
 
     .product__preview {
-        height: 227px;
+        /*height: 227px;*/
+        width: 100%;
     }
 
     .product__info {
-        margin-bottom: 36px;
-        margin-left: 34px;
-        margin-right: 34px;
-        outline-offset: 27px;
+        margin-bottom: 77px;
     }
 
     .footer {
@@ -1778,7 +1796,7 @@ form.search__box {
     .trends__title {
         color: #0f0d0e;
         text-align: center;
-        font-family: "Open Sans", sans-serif;
+        font-family: "OpenSans", sans-serif;
         text-transform: uppercase;
         font-size: 16px;
         font-weight: 700;
@@ -1977,7 +1995,7 @@ form.search__box {
 
 .popup__title {
     text-align: center;
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     text-transform: uppercase;
     font-weight: 700;
     font-size: 20px;
@@ -1990,7 +2008,7 @@ form.search__box {
     height: 20px;
     width: 20px;
     background-position: right;
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     background-size: 15px;
     background-image: url("./svg/form-x.svg");
     background-repeat: no-repeat;
@@ -2007,7 +2025,7 @@ form.search__box {
 }
 
 .form__item-name {
-    font-family: "Open Sans", sans-serif;
+    font-family: "OpenSans", sans-serif;
     font-size: 13px;
     color: #000;
 }
