--- a/style.css
+++ b/style.css
@@ -181,7 +181,6 @@ a {
 .trends__container {
     /*display: flex;*/
     width: 100%;
-    /*max-width: 1200px;*/
     margin: auto;
     position: relative;
 }
@@ -211,8 +210,8 @@ a {
 .trends__container-card {
     display: flex;
     width: 100%;
-    /*max-height: 348px;*/
     flex-wrap: nowrap;
+    justify-content: space-between;
 }
 
 .trend__card::before {
@@ -232,11 +231,10 @@ a {
 .trend__card {
     display: flex;
     position: relative;
-    height: 303px;
+    /*height: 303px;*/
     width: calc((100% - (4px * 3)) / 4);
-    align-items: flex-end;
-    margin: auto;
-    padding: 0 0 0 0;
+    /*align-items: flex-end;*/
+    padding: 6% 20px 20px 20px;
 }
 
 .trend1 {
@@ -273,16 +271,14 @@ a {
 
 /*===Border c Заголовком и категории===*/
 .trend__border {
-    display: block;
-    position: relative;
     z-index: 3;
     color: #ffffff;
     border: 3px solid #b59f5b;
-    margin-bottom: 8px;
-    padding: 36px 20px 30px 29px;
-    margin-left: 24px;
-    margin-right: 24px;
-    width: 100%;
+    /*margin-bottom: 8px;*/
+    display: flex;
+    align-content: flex-end;
+    flex-wrap: wrap;
+    padding: 10% 20px 12px 20px;
 }
 
 .trend__border:hover {
@@ -334,9 +330,9 @@ a {
 
 /*===Left===*/
 .main {
-    /*width: calc(100% - 25%);*/
-    margin-right: auto;
-    margin-left: auto;
+    width: calc(100% - 272px - 40px);
+    /*margin-right: auto;*/
+    /*margin-left: auto;*/
 }
 
 .main__post {
@@ -354,7 +350,7 @@ a {
 .main__post-info {
     width: 38.5%;
     margin-left: 30px;
-    margin-right: 30px;
+    /*margin-right: 30px;*/
     margin-top: -15px;
 }
 
@@ -453,8 +449,8 @@ a {
 /*===Right десктор===*/
 .sidebar {
     width: 272px;
-    margin-left: auto;
-    margin-right: auto;
+    /*margin-left: auto;*/
+    /*margin-right: auto;*/
 }
 
 .new__posts {
@@ -1103,7 +1099,7 @@ form.search__box {
     }
 
     .trends__container-card {
-        /*display: flex; */
+        display: flex;
         flex-wrap: wrap;
         /*max-height: 530px;*/
     }
@@ -1121,12 +1117,13 @@ form.search__box {
 
     .main__sidebar {
         flex-wrap: nowrap;
+        padding: 0;
     }
 
-    .main {
-        width: calc((100% - 272px) / 2);
-        margin-left: 20px;
-    }
+    /*.main {*/
+        /*width: calc((100% - 272px) / 2);*/
+        /*margin-left: 20px;*/
+    /*}*/
 
     .main__post {
         flex-wrap: wrap;
@@ -1555,8 +1552,7 @@ form.search__box {
         width: 100%;
         flex-wrap: wrap;
         margin-top: 30px;
-        /*width: calc((100% - 272px) / 2);*/
-    }
+            }
 
     .main {
         width: 100%;
@@ -1790,7 +1786,7 @@ form.search__box {
     .trends {
         display: flex;
         flex-wrap: wrap;
-        max-height: 551px;
+        /*max-height: 551px;*/
     }
 
     .trends__title {
@@ -1812,18 +1808,14 @@ form.search__box {
     }
 
     .trend__card {
-        width: calc((100% - (4px * 3)) / 2);
-        max-height: 249px;
+        width: calc((100% - (4px * 1)) / 2);
+        max-height: 230px;
         margin-bottom: 4px;
     }
 
-    .trend__border {
-        margin-bottom: 12px;
-        padding: 22px 20px 30px 29px;
-        margin-left: 15px;
-        margin-right: 15px;
-    }
-
+    /*.trend__border {*/
+    /*    padding-left: 3px;*/
+    /*}*/
     .main__sidebar {
         width: 100%;
         flex-wrap: wrap;
