--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ a {
     text-decoration: none;
 }
 
+/*Начало*/
 .header {
     background-image: url("./images/banner-bg.jpg");
     background-repeat: no-repeat;
@@ -231,10 +232,11 @@ a {
 .trend__card {
     display: flex;
     position: relative;
-    /*height: 303px;*/
+    min-height: 320px;
     width: calc((100% - (4px * 3)) / 4);
-    /*align-items: flex-end;*/
-    padding: 6% 20px 20px 20px;
+    align-items: flex-end;
+    padding: 20px 20px 20px 20px;
+    margin-bottom: 8px;
 }
 
 .trend1 {
@@ -278,7 +280,7 @@ a {
     display: flex;
     align-content: flex-end;
     flex-wrap: wrap;
-    padding: 10% 20px 12px 20px;
+    padding: 40px 20px 30px 20px;
 }
 
 .trend__border:hover {
@@ -348,15 +350,15 @@ a {
 }
 
 .main__post-info {
-    width: 38.5%;
+    width: 41.5%;
     margin-left: 30px;
     /*margin-right: 30px;*/
-    margin-top: -15px;
+    /*margin-top: -22px;*/
 }
 
 /*===Travel===*/
 .categories ul li a {
-    width: 125px;
+    /*width: 125px;*/
     color: #b59f5b;
     font-family: "OpenSans", sans-serif;
     font-size: 14px;
@@ -371,6 +373,7 @@ a {
 /*===категории в 1 строку===*/
 .categories ul {
     display: flex;
+    margin-top: -12px;
 }
 
 .categories ul li:nth-of-type(1n + 2) {
@@ -397,6 +400,7 @@ a {
     line-height: normal;
     text-align: left;
     text-transform: uppercase;
+    margin-top: -8px;
 }
 
 .post__title a:hover {
@@ -410,7 +414,7 @@ a {
 
 /*===10 июня===*/
 .date {
-    width: 79px;
+    /*width: 79px;*/
     color: #888888;
     font-family: "OpenSans", sans-serif;
     font-size: 12px;
@@ -513,7 +517,7 @@ a {
     line-height: normal;
     font-weight: 700;
     width: 180px;
-    margin-top: -14px;
+    margin-top: -20px;
 }
 
 .sidebar__title a:hover {
@@ -1101,7 +1105,6 @@ form.search__box {
     .trends__container-card {
         display: flex;
         flex-wrap: wrap;
-        /*max-height: 530px;*/
     }
 
     .trend__card {
@@ -1121,10 +1124,9 @@ form.search__box {
     }
 
     /*.main {*/
-        /*width: calc((100% - 272px) / 2);*/
-        /*margin-left: 20px;*/
+    /*width: calc((100% - 272px) / 2);*/
+    /*margin-left: 20px;*/
     /*}*/
-
     .main__post {
         flex-wrap: wrap;
         width: 100%;
@@ -1421,7 +1423,6 @@ form.search__box {
     }
 
     .header__logo-mobile {
-        /* max-width: 270px; */
         padding-top: 210px;
         margin: auto;
     }
@@ -1527,7 +1528,6 @@ form.search__box {
 
     .trends__container-card {
         flex-wrap: wrap;
-        /*max-height: 1240px;*/
     }
 
     .trend__card {
@@ -1552,7 +1552,7 @@ form.search__box {
         width: 100%;
         flex-wrap: wrap;
         margin-top: 30px;
-            }
+    }
 
     .main {
         width: 100%;
@@ -1786,7 +1786,6 @@ form.search__box {
     .trends {
         display: flex;
         flex-wrap: wrap;
-        /*max-height: 551px;*/
     }
 
     .trends__title {
